--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
               id="volume"
             />
           </div>
+          <div class="device-selector">
+            <label for="audio-output">Select Output Device:</label>
+            <select id="audio-output">
+              <option value="">Default</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
