--- a/index.html
+++ b/index.html
@@ -222,11 +222,9 @@
               id="volume"
             />
           </div>
-          <div class="device-selector">
-            <label for="audio-output">Select Output Device:</label>
-            <select id="audio-output">
-              <option value="">Default</option>
-            </select>
+          <div class="output">
+            <button id="select-device">Select Output Device</button>
+            <p id="output-status"></p>
           </div>
         </div>
       </div>
