--- a/audioflow.html
+++ b/audioflow.html
@@ -33,6 +33,6 @@
     <footer class="footer">
       <p>&copy; 2024 Sampler</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
