--- a/index.html
+++ b/index.html
@@ -242,6 +242,6 @@
     <footer class="footer">
       <p>&copy; 2024 Sampler</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
