--- a/audioflow.html
+++ b/audioflow.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Audio Flow</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <style>
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
   <body>
     <nav class="navbar">
       <div class="navbar-container">
@@ -33,6 +27,6 @@
     <footer class="footer">
       <p>&copy; 2024 Sampler</p>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./navbar.js"></script>
   </body>
 </html>
