--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">Sampler</div>
         <button class="navbar-toggle" id="navbar-toggle">&#9776;</button>
         <ul class="navbar-links" id="navbar-links">
-          <li><a href="#">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./userguide.html">User Guide</a></li>
           <li><a href="./audioflow.html">Audio Flow</a></li>
           <li><a href="./model.html">Function Model</a></li>
@@ -243,5 +243,6 @@
       <p>&copy; 2024 Sampler</p>
     </footer>
     <script src="./script.js"></script>
+    <script src="./navbar.js"></script>
   </body>
 </html>
