--- a/certification.html
+++ b/certification.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audio Flow</title>
+    <title>Certification</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -21,10 +21,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <h1>Audio Flowchart</h1>
-      <img src="./images/Flowchart.svg" alt="Audio Flowchart" />
-    </div>
+    <div class="container"></div>
     <footer class="footer">
       <span>&copy; 2024 Sampler</span>
     </footer>
