--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
     </div>
     <footer class="footer">
-      <p>&copy; 2024 Sampler</p>
+      <span>&copy; 2024 Sampler</span>
     </footer>
     <script src="./script.js"></script>
     <script src="./navbar.js"></script>
