--- a/certification.html
+++ b/certification.html
@@ -21,7 +21,35 @@
         </ul>
       </div>
     </nav>
-    <div class="container"></div>
+    <div class="container">
+      <h1>Certification of Standards and Accessibility Compliance</h1>
+      <div class="container-text">
+        <h2>Compliance with Web Standards</h2>
+        <h3>Standards Followed:</h3>
+        <p><code>HTML5</code> Ensures proper structure and semantic usage.</p>
+        <p>
+          <code>CSS3</code> Adheres to modern styling conventions with
+          responsive design.
+        </p>
+        <p>
+          <code>JavaScript ES6+</code> Implements current language features for
+          performance and maintainability.
+        </p>
+        <p>
+          <code>Web Audio API Standards</code> Proper usage of the API for audio
+          processing.
+        </p>
+        <p>
+          <b>Cross-browser compatibility</b> verified for major browsers
+          <b>(Chrome, Firefox, Safari, Edge)</b>.
+        </p>
+        <p>
+          <b>Semantic HTML</b>: Uses proper tags
+          <b>(&lt;button&gt;, &lt;input&gt;, &lt;label&gt;)</b> to ensure
+          accessibility by default.
+        </p>
+      </div>
+    </div>
     <footer class="footer">
       <span>&copy; 2024 Sampler</span>
     </footer>
