--- a/copyright.html
+++ b/copyright.html
@@ -21,7 +21,40 @@
         </ul>
       </div>
     </nav>
-    <div class="container"></div>
+    <div class="container">
+      <h1>Authorship and Copyright</h1>
+      <dov class="container-text">
+        <h2>Authorship</h2>
+        <p>
+          This is a simple Web Audio Sampler application that is designed and
+          developed by Hari Narayanan. The project demonstrates how Web Audio
+          allows the creation of an interactive audio playback and processing
+          tool. Contributions to this project include code implementation,
+          design, and functionality specifications.
+        </p>
+        <h2>Copyright</h2>
+        <p>
+          &copy; 2024 Hari Narayanan. All rights reserved. This application, in
+          all its components, including but not limited to the code, design, and
+          assets, is protected under the terms of applicable copyright laws and
+          intellectual property rights. Nobody has any right to partially or
+          completely reproduce, publish, distribute, or transform any part of
+          this work without prior written permission of the author
+        </p>
+        <h2>Disclaimer</h2>
+        <p>
+          This application is provided "as is" with no type of warranty
+          whatsoever regarding merchant ability, fitness, noninfringement, etc.
+          In no event will the author of this be liable for any form of damage
+          that results from the application.
+        </p>
+        <h2>Usage Rights</h2>
+        <p>
+          Permission is granted to use this software for educational and
+          non-commercial purposes.
+        </p>
+      </dov>
+    </div>
     <footer class="footer">
       <span>&copy; 2024 Sampler</span>
     </footer>
