--- a/userguide.html
+++ b/userguide.html
@@ -80,13 +80,11 @@
         </p>
         <h2>Adjusting Volume</h2>
         <h3>Individual Grid Volume</h3>
-        <p>
-          Use the <b>slider</b> in each grid to control its volume (0 to 10).
-        </p>
+        <p>Use the <b>slider</b> in each grid to control its volume.</p>
         <h3>Master Volume</h3>
         <p>
           Locate the <b>Master Volume slider</b> in the <b>Sidebar</b> and
-          adjust it to control the sampler's overall volume (0 to 10).
+          adjust it to control the sampler's overall volume.
         </p>
         <h2>Advanced Controls</h2>
         <h3>Equalization (EQ)</h3>
@@ -94,14 +92,14 @@
           Fine-tune the audio mix using the <b>EQ sliders</b> in the
           <b>Sidebar</b>:
         </p>
-        <p><b>Low</b>: Adjust bass frequencies (-10 to +10 dB).</p>
-        <p><b>Mid</b>: Adjust mid-range frequencies (-10 to +10 dB).</p>
-        <p><b>High</b>: Adjust treble frequencies (-10 to +10 dB).</p>
+        <p><b>Low</b>: Adjust bass frequencies.</p>
+        <p><b>Mid</b>: Adjust mid-range frequencies.</p>
+        <p><b>High</b>: Adjust treble frequencies.</p>
         <h3>Reverb Effect</h3>
         <p>
           Add <b>spatial effects</b> to your sound by adjusting the
-          <b>Reverb slider</b> in the <b>Sidebar</b> (0 to 10). Higher values
-          create more reverb and spacious audio output.
+          <b>Reverb slider</b> in the <b>Sidebar</b>. Higher values create more
+          reverb and spacious audio output.
         </p>
       </div>
     </div>
