--- a/copyright.html
+++ b/copyright.html
@@ -27,19 +27,20 @@
         <h2>Authorship</h2>
         <p>
           This is a simple Web Audio Sampler application that is designed and
-          developed by Hari Narayanan. The project demonstrates how Web Audio
-          allows the creation of an interactive audio playback and processing
-          tool. Contributions to this project include code implementation,
-          design, and functionality specifications.
+          developed by Harinarayanan Krishnakumar. The project demonstrates how
+          Web Audio allows the creation of an interactive audio playback and
+          processing tool. Contributions to this project include code
+          implementation, design, and functionality specifications.
         </p>
         <h2>Copyright</h2>
         <p>
-          &copy; 2024 Hari Narayanan. All rights reserved. This application, in
-          all its components, including but not limited to the code, design, and
-          assets, is protected under the terms of applicable copyright laws and
-          intellectual property rights. Nobody has any right to partially or
-          completely reproduce, publish, distribute, or transform any part of
-          this work without prior written permission of the author
+          &copy; 2024 Harinarayanan Krishnakumar. All rights reserved. This
+          application, in all its components, including but not limited to the
+          code, design, and assets, is protected under the terms of applicable
+          copyright laws and intellectual property rights. Nobody has any right
+          to partially or completely reproduce, publish, distribute, or
+          transform any part of this work without prior written permission of
+          the author
         </p>
         <h2>Disclaimer</h2>
         <p>
